# refund-audit-log

./: .gitignore  .replit  ai_processor.py  app.py  as400_parser.py  data_exporter.py  direct_processor.py  main.py  models.py  new_uploader.py  ocr_processor.py  pdf_reader.py  pyproject.toml  receipt_trainer.py  replit.nix  safe_uploader.py  simple_processor.py  trained_item_locations.json  trained_ocr_processor.py
instance/: auditlog.db
static/css/: custom.css
static/js/: app.js  dropzone-config.js
templates/: 404.html  500.html  history.html  index.html  results.html  train.html
