[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gspread>=6.2.0",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "oauth2client>=4.1.3",
    "openai>=1.75.0",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
]
